# Vector-To-Bitmap

./: .gitignore  CMakeLists.txt
build2/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Utilities.vcxproj  Utilities.vcxproj.filters  VectorToBitmapFLTK.sln  VectorToBitmapFLTK.vcxproj  VectorToBitmapFLTK.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  circle.psd  cmake_install.cmake
include/: Common.h  MyObj.h  cgal.h  cvsystem.h  fltk.h  opencv.h  opengl.h  potrace.h  stllibrary.h
include/CVSystem/: CGALTools.h  CSSSmoothing.h  CurveFitting.h  CurveInterpolation.h  CurveRDP.h  Delaunay_mesh_face_base_info_2.h  LineCloud.h  LinesSorter.h  MyIndexedBezierCurves.h  MyIndexedLine.h  MyIndexedTriangle.h  MyLine.h  MyPoint.h  MyQuad.h  MyTriangle.h  NanoFLANN.h  PixelsInTriangle.h  PointInTrianglesTest.h  ScreentoneSegmentation.h  SystemParams.h  TriangleType.h  Triangulator1.h  UtilityFunctions.h
include/Shader/: BasicTextureShader.h  ScreentoneShader.h  ShaderObject.h
shader/: BasicShader.fs.glsl  BasicShader.vs.glsl  Screentone.fs.glsl  Screentone.vs.glsl
src/: CallBacks.H  CallBacks.cpp  Common.cpp  PreView.H  PreView.cpp  TextureView.H  TextureView.cpp  Track.cpp  TrainWindow.H  TrainWindow.cpp  main.cpp
src/CVSystem/: CGALTools.cpp  CSSSmoothing.cpp  CurveFitting.cpp  CurveInterpolation.cpp  CurveRDP.cpp  LinesSorter.cpp  PixelsInTriangle.cpp  PointInTrianglesTest.cpp  ScreentoneSegmentation.cpp  SystemParams.cpp  Triangulator1.cpp  UtilityFunctions.cpp
src/Shader/: BasicTextureShader.cpp  ScreentoneShader.cpp  ShaderObject.cpp
